--- a/SoccerMarketValue_Analysis.ipynb
+++ b/SoccerMarketValue_Analysis.ipynb
@@ -1935,7 +1935,7 @@
    "outputs": [],
    "source": [
     "def capitalize_header():\n",
-    "    \"\"\"Capitalizes the columns headers of a given DataFrame\"\"\"\n",
+    "    \"\"\"Capitalizes first letter of each word in the column header of a given DataFrame\"\"\"\n",
     "    \n",
     "    df_clean.columns = [i.title() for i in df_clean]"
    ]
